src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Medicare__c</fullName>
        <description>* Emergency Department Payor Mix (as a percent of emergency room patient volume and not charges)</description>
        <label>Medicare %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Misc__c</fullName>
        <description>Misc from Demographics</description>
        <label>Misc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NFP__c</fullName>
        <label>NFP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NHomeCare__c</fullName>
        <label>NHomeCare</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_ID__c</fullName>
        <description>The National Provider Index is a facility tracking number issued to hospitals by the federal goverment.</description>
        <label>NPI_ID</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NP_PA_Current_Hour_Coverage__c</fullName>
        <label>NP/PA  – Current Hour Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NP_PA_Friday__c</fullName>
        <label>NP/PA Friday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Monday__c</fullName>
        <label>NP/PA Monday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Saturday__c</fullName>
        <label>NP/PA Saturday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Sunday__c</fullName>
        <label>NP/PA Sunday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Thursday__c</fullName>
        <label>NP/PA Thursday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Tuesday__c</fullName>
        <label>NP/PA Tuesday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NP_PA_Wednesday__c</fullName>
        <label>NP/PA Wednesday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nearby_Places__c</fullName>
        <description>Industries from TSG DB; nearby cities</description>
        <label>Nearby Attractions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Additional_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Additional Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Annual_Visits__c</fullName>
        <label>Number of Annual Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Client_Hospitals__c</fullName>
        <label>Number of Client Hospitals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_ED_Beds__c</fullName>
        <description>Use at start up to record the actual number of ED beds at this account.</description>
        <label>Number of ED Beds</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hospital_Employees__c</fullName>
        <description>Use at start up to record the: Total Number of Hospital Employees</description>
        <label>Number of Hospital Employees</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Physicians__c</fullName>
        <label>Number of Physicians</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneApp_CEID__c</fullName>
        <description>Direct link field to the OneApp CredentialingEntity Table via CEID field.</description>
        <label>OneApp CEID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Business_Areas__c</fullName>
        <label>Other Business Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Managed_Care__c</fullName>
        <label>Other Managed Care</label>
        <picklist>
            <picklistValues>
                <fullName>Par</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Par</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_explain_all_other_categories__c</fullName>
        <label>Other %:</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Out_Patient_Visits__c</fullName>
        <label>Out Patient Visits</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Pt_Per_Hour__c</fullName>
        <label>Overall Pt. Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Pt_Sat__c</fullName>
        <label>Overall Pt. Sat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Own_Church__c</fullName>
        <label>Own Church</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Own_Federal__c</fullName>
        <label>Own Federal</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Own_State__c</fullName>
        <label>Own State</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA_NP_Coverage_Hours_Per_Yr__c</fullName>
        <label>PA/NP Coverage Hours Per Yr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA_NP_Hours_Per_Day__c</fullName>
        <label>PA/NP Coverage Hours Per Day</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PA_NP_Pay_Rate__c</fullName>
        <description>Physicians Assistant/ Nurse Practitioner Regular Pay Rate</description>
        <inlineHelpText>Blended hourly rate including RPP/Bonus</inlineHelpText>
        <label>PA/NP Pay Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PQRI_Composite__c</fullName>
        <label>PQRI Composite</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Encounters__c</fullName>
        <inlineHelpText>Hospitalist: Anticipated Patient Encounters (Annual)</inlineHelpText>
        <label>Patient Encounters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payor_Mix_Comments__c</fullName>
        <description>Payor Mix Comments</description>
        <label>Payor Mix Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PeopleSoftHospID__c</fullName>
        <description>PeopleSoftHospID</description>
        <label>PeopleSoftHospID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phy_Pt_per_Hour__c</fullName>
        <label>Phy. Pt per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phys_Friday__c</fullName>
        <label>Phys. Friday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Monday__c</fullName>
        <label>Phys. Monday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Saturday__c</fullName>
        <label>Phys. Saturday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Sunday__c</fullName>
        <label>Phys. Sunday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Thursday__c</fullName>
        <label>Phys. Thursday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Tuesday__c</fullName>
        <label>Phys. Tuesday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phys_Wednesday__c</fullName>
        <label>Phys. Wednesday</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <description>Use to track the physical address for a hospital.</description>
        <label>Physical Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia     </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain    </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin      </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burma   </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi  </fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <description>Use to track the phyical location for the hospital. Use a 2 digit US Postal Code (caps) for state.  Changed mapping per request of Jim Guidry.</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Attire_Requirements__c</fullName>
        <description>Use at startup to records the:   Physician Attire Requirements</description>
        <label>Physician Attire Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physician_Coverage_Hours_Per_Day__c</fullName>
        <label>Physician Coverage Hours Per Day</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Coverage_Hours_Per_Yr__c</fullName>
        <label>Physician Coverage Hours Per Yr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Current_Hour_Coverage__c</fullName>
        <label>Physician  – Current Hour Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Entities__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Entity</label>
        <referenceTo>Corp_Entities__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>R00N300000012dxtEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physicians_PayRate__c</fullName>
        <description>Regular Physician Pay Rate</description>
        <inlineHelpText>Blended hourly rate including RPP/Bonus</inlineHelpText>
        <label>Physicians Pay Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Full_Time_Positions__c</fullName>
        <description>How many full time positions are planned to be filled / needed at this facility?</description>
        <label>Planned Full Time Positions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Part_Time_Positions__c</fullName>
        <description>How many part time positions are planned to be filled / needed at this facility?</description>
        <label>Planned Part Time Positions</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_City__c</fullName>
        <label>Point of Contact City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Email__c</fullName>
        <label>Point of Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone_Fax__c</fullName>
        <label>Point of Contact Phone (Fax)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone_Mobile__c</fullName>
        <label>Point of Contact Phone (Mobile)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Phone_Work__c</fullName>
        <label>Point of Contact Phone (Work)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Position__c</fullName>
        <label>Point of Contact Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_State__c</fullName>
        <label>Point of Contact State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Street_Address__c</fullName>
        <label>Point of Contact Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_Zip_Code__c</fullName>
        <label>Point of Contact Zip Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <label>Point of Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Population_Comments__c</fullName>
        <description>Population</description>
        <label>Population</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <description>Use at startup to record the:  Population  of the city this facility is in.</description>
        <label>Population Old</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Hospital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Hospital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privileging_Timeframe__c</fullName>
        <label>Privileging Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProCode_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProCode Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (ProCode Contact)</relationshipLabel>
        <relationshipName>Accounts_Hospitals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProCode_Contact_s_Email__c</fullName>
        <formula>ProCode_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProCode Contact&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProCode_Contact_s_Phone__c</fullName>
        <formula>ProCode_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProCode Contact&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProCode_Liaison_s_Email_Address__c</fullName>
        <formula>ProCode_Liasion__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProCode Liaison&apos;s Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProCode_Liasion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProCode Liasion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts_Hospitals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procode_Liaison_s_Phone__c</fullName>
        <formula>ProCode_Liasion__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procode Liaison&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Number_of_Residents_Year__c</fullName>
        <label>Program Number of Residents/Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Medical School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residency Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellowship Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Date__c</fullName>
        <description>Legacy System Proposal Date</description>
        <label>Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proprietary__c</fullName>
        <label>Proprietary</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Requirements_Summary__c</fullName>
        <description>Summary for Provider Requirements. This is meant to be an overview for the actual requirements</description>
        <label>Provider Requirements Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Psych__c</fullName>
        <label>Psych</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RVU_per_Pt__c</fullName>
        <label>RVU per Pt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reappointment_Terms_months__c</fullName>
        <label>Reappointment Terms (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Red_Phone__c</fullName>
        <description>Emergency Red Phone</description>
        <label>Red Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region_Detail__c</fullName>
        <description>Potential Delete - 1/4/2012</description>
        <label>Region Detail</label>
        <picklist>
            <picklistValues>
                <fullName>MW     MIDWEST REGION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC I     SOUTH CENTRAL REGION I (LA, MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC II    SOUTH CENTRAL REGION II (LA, MS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC III  SOUTH CENTRAL REGION III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE    SOUTHEAST REGION (GA, FL, AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW I  SOUTHWEST REGION (CA, NM, TX)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW II  SOUTHWEST REGION (CA, NM, TX)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HM West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WW4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_RVP__c</fullName>
        <label>Regional RVP</label>
        <picklist>
            <picklistValues>
                <fullName>Julie Peevehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shweta Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Stout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathleen Leider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rehab__c</fullName>
        <label>Rehab</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>